--- a/src/main.css
+++ b/src/main.css
@@ -14,13 +14,18 @@ body {
     margin: 0;
 }
 
-img {
+img,
+iframe {
     max-width: 100%;
 }
 
 main {
     margin: auto;
     max-width: 60dvw;
+
+    @media screen and (max-width: 960px) {
+        max-width: 95dvw;
+    }
 }
 
 header {
