--- a/docs/main.css
+++ b/docs/main.css
@@ -21,7 +21,7 @@ iframe {
 
 main {
     margin: auto;
-    max-width: 60dvw;
+    max-width: 50rem;
 
     @media screen and (max-width: 960px) {
         max-width: 95dvw;
