--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -11,7 +11,36 @@
         <h1>Hypogeum ※ dark&nbsp;ambient // ritual // drone // industrial</h1>
     </header>
     <main>
+        <form
+            action="https://buttondown.com/api/emails/embed-subscribe/nandordevai"
+            method="post"
+            id="newsletter"
+        >
+            <label for="bd-email">Hírlevél:</label>
+            <input type="email" name="email" id="bd-email">
+            <input type="submit" value="Feliratkozás" id="newsletter-submit">
+        </form>
+        <hr>
         {{ content | safe }}
     </main>
+    <script>
+        async function sendNewsletterForm() {
+            const formData = new FormData(form);
+            await fetch('https://buttondown.com/api/emails/embed-subscribe/nandordevai', {
+                method: 'POST',
+                body: formData,
+            });
+            document.querySelector('#bd-email').value = '';
+        }
+
+        const form = document.querySelector('#newsletter');
+        const submit = document.querySelector('#newsletter-submit');
+        form.addEventListener('submit', async (event) => {
+            submit.disabled = true;
+            event.preventDefault();
+            await sendNewsletterForm();
+            submit.disabled = false;
+        });
+    </script>
 </body>
 </html>
