--- a/_layouts/index.njk
+++ b/_layouts/index.njk
@@ -2,6 +2,16 @@
 layout: base.njk
 ---
 
+<form
+    action="https://buttondown.com/api/emails/embed-subscribe/nandordevai"
+    method="post"
+    id="newsletter"
+    class="newsletter"
+>
+    <label for="bd-email">Hírlevél:</label>
+    <input type="email" name="email" id="bd-email">
+    <input type="submit" value="Feliratkozás" id="newsletter-submit">
+</form>
 {%- for post in collections.post | reverse -%}
 <section>
     <h1>{{ post.data.title }}</h1>
