--- a/src/main.css
+++ b/src/main.css
@@ -34,6 +34,10 @@ header {
     background-color: var(--text-color);
     padding: 1rem;
 
+    a {
+        color: var(--bg-color);
+    }
+
     h1 {
         color: var(--bg-color);
         margin: 0;
