--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -5,34 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hypogeum ※ dark ambient // ritual // drone // industrial</title>
     <link rel="stylesheet" href="/main.css">
+    {% block head %}{% endblock %}
 </head>
 <body>
     <header>
         <h1><a href="https://hypogeum.hu">Hypogeum</a> ※ dark&nbsp;ambient // ritual // drone // industrial</h1>
     </header>
     <main>
-        {{ content | safe }}
+        {% block content %}{% endblock %}
     </main>
-    <script>
-        async function sendNewsletterForm() {
-            const formData = new FormData(form);
-            await fetch('https://buttondown.com/api/emails/embed-subscribe/nandordevai', {
-                method: 'POST',
-                body: formData,
-            });
-            document.querySelector('#bd-email').value = '';
-        }
-
-        const form = document.querySelector('#newsletter');
-        const submit = document.querySelector('#newsletter-submit');
-        if (form) {
-            form.addEventListener('submit', async (event) => {
-                submit.disabled = true;
-                event.preventDefault();
-                await sendNewsletterForm();
-                submit.disabled = false;
-            });
-        }
-    </script>
 </body>
 </html>
