--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -1,9 +1,9 @@
----
-layout: base.njk
----
+{% extends '_layouts/base.njk' %}
 
-<section>
-    <h1>{{ title }}</h1>
-    {{ content | safe }}
-    <time datetime="{{ page.date.toISOString() }}">{{ page.date.toUTCString() }}</time>
-</section>
+{% block content %}
+    <section>
+        <h1>{{ title }}</h1>
+        {{ content | safe }}
+        <time datetime="{{ page.date.toISOString() }}">{{ page.date.toUTCString() }}</time>
+    </section>
+{% endblock %}
