--- a/_layouts/index.njk
+++ b/_layouts/index.njk
@@ -5,7 +5,7 @@
         <section>
             <h1>{{ post.data.title }}</h1>
             {{ post.content | safe }}
-            <time datetime="{{ post.data.date.toISOString() }}">{{ post.data.date.toLocaleString('hu-HU', { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric' }) }}</time>
+            <a class="permalink" href="{{ post.url }}"><time datetime="{{ post.data.date.toISOString() }}">{{ post.data.date.toLocaleString('hu-HU', { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric' }) }}</time></a>
         </section>
     {%- endfor -%}
 {% endblock %}
