--- a/docs/main.css
+++ b/docs/main.css
@@ -17,6 +17,14 @@ body {
     margin: 0;
 }
 
+h1 {
+    font-size: 1.5rem;
+}
+
+h2 {
+    font-size: 1.25rem;
+}
+
 header {
     background-color: var(--text-color);
     overflow: hidden;
@@ -51,11 +59,6 @@ iframe {
 iframe[src*="youtube.com"] {
     aspect-ratio: 16 / 9;
     height: unset;
-}
-
-iframe[src*="bandcamp.com"] {
-    aspect-ratio: 560 / 435;
-    height: unset !important;
 }
 
 main {
