--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -6,6 +6,7 @@
     <title>Hypogeum ※ dark ambient // ritual // drone // industrial</title>
     <link rel="stylesheet" href="/main.css">
     <script type="text/javascript" src="/js/newsletter.js"></script>
+    <meta property="og:image" content="https://hypogeum.hu/img/logo-black.png">
 </head>
 <body>
     <img class="logo" src="/img/logo.png" alt="Logo">
