--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dark/ritual ambient, drone, industrial zenei website">
     <title>Hypogeum ※ dark ambient // ritual // drone // industrial</title>
     <link rel="stylesheet" href="/main.css">
     <script type="text/javascript" src="/js/newsletter.js"></script>
