--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -1,5 +1,9 @@
 {% extends '_layouts/base.njk' %}
 
+{% block meta %}
+    <meta property="og:title" content="Hypogeum ※ {{ title }}">
+{% endblock %}
+
 {% block content %}
     <section>
         <h1>{{ title }}</h1>
