--- a/docs/main.css
+++ b/docs/main.css
@@ -106,6 +106,11 @@ nav {
     a:has(+ a) {
         margin-inline-end: 1rem;
     }
+
+    &.footer {
+        border: none;
+        border-block-start: 1px solid var(--text-color);
+    }
 }
 
 p {
