--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-    <section>
+    <article>
         <h1>{{ title }}</h1>
         {{ content | safe }}
         <time datetime="{{ page.date.toISOString() }}">{{ page.date.toLocaleString('hu-HU', { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric' }) }}</time>
-    </section>
+    </article>
 {% endblock %}
