--- a/_layouts/index.njk
+++ b/_layouts/index.njk
@@ -9,6 +9,10 @@ pagination:
 {% extends '_layouts/base.njk' %}
 
 {% block content %}
+    <article>
+        <h1>English version on the way</h1>
+        <p>We’re in the process of translating this website into English. Please check back soon for more content.</p>
+    </article>
     {%- for post in posts -%}
         <article>
             <h1>{{ post.data.title }}</h1>
@@ -19,6 +23,13 @@ pagination:
                         year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric'
                     }) }}</time>
             </a>
+            <p class="tags">
+                {%- for tag in post.data.tags -%}
+                    {% if tag != "post" %}
+                        <span class="tag">{{ tag }}</span>
+                    {% endif %}
+                {%- endfor -%}
+            </p>
         </article>
     {%- endfor -%}
 
