--- a/src/main.css
+++ b/src/main.css
@@ -186,3 +186,11 @@ time {
         width: 15rem;
     }
 }
+
+.tags {
+    .tag {
+        &::before {
+            content: '#';
+        }
+    }
+}
