post: Hradby Samoty

--- a/_layouts/index.njk
+++ b/_layouts/index.njk
@@ -11,7 +11,7 @@ pagination:
 {% block content %}
     <article>
         <h1>English version on the way</h1>
-        <p>We’re in the process of translating this website into English. Please check back soon for more content.</p>
+        <p>We’re in the process of translating all earlier posts into English. Please check back soon for more content.</p>
     </article>
     {%- for post in posts -%}
         <article>
